[package]
name = "jq-sys"
version = "0.1.1"
license = "Apache-2.0/MIT"
authors = ["Owen Nelson <onelson@gmail.com>"]
description = "Generated bindings for libjq."
homepage = "https://github.com/onelson/jq-sys"
repository = "https://github.com/onelson/jq-sys"
categories = ["external-ffi-bindings"]
keywords = ["json", "jq"]
readme = "README.md"

[features]
default = ["bundled"]
bundled = ["jq-src"]

[dependencies]
jq-src = { version = "0.1", optional = true }
