[package]
name = "jq-sys"
version = "0.2.0"
license = "Apache-2.0/MIT"
authors = ["Owen Nelson <onelson@gmail.com>"]
description = "Generated bindings for libjq."
homepage = "https://github.com/onelson/jq-sys"
repository = "https://github.com/onelson/jq-sys"
categories = ["external-ffi-bindings"]
keywords = ["json", "jq"]
readme = "README.md"
links = "jq"
build = "build.rs"

[features]
default = ["pkg-config"]
bundled = ["jq-src"]

[build-dependencies]
jq-src = { version = "^0.2.0", optional = true }
pkg-config = { version = "0.3.14", optional = true }
